; ModuleID = '/home/carl/AnghaBench/netdata/registry/extr_registry_machine.c_registry_machine_allocate.c'
source_filename = "/home/carl/AnghaBench/netdata/registry/extr_registry_machine.c_registry_machine_allocate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32, i32 }
%struct.TYPE_6__ = type { i32, i64, i64, i64, i32 }

@D_REGISTRY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [85 x i8] c"Registry: registry_machine_allocate('%s'): creating new machine, sizeof(MACHINE)=%zu\00", align 1
@GUID_LEN = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [71 x i8] c"Registry: registry_machine_allocate('%s'): creating dictionary of urls\00", align 1
@DICTIONARY_FLAGS = common dso_local global i32 0, align 4
@registry = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_6__* @registry_machine_allocate(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_6__*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i32, i32* @D_REGISTRY, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 (i32, i8*, i8*, ...) @debug(i32 %6, i8* getelementptr inbounds ([85 x i8], [85 x i8]* @.str, i64 0, i64 0), i8* %7, i64 40)
  %9 = call %struct.TYPE_6__* @mallocz(i32 40)
  store %struct.TYPE_6__* %9, %struct.TYPE_6__** %5, align 8
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = load i32, i32* @GUID_LEN, align 4
  %15 = call i32 @strncpyz(i32 %12, i8* %13, i32 %14)
  %16 = load i32, i32* @D_REGISTRY, align 4
  %17 = load i8*, i8** %3, align 8
  %18 = call i32 (i32, i8*, i8*, ...) @debug(i32 %16, i8* getelementptr inbounds ([71 x i8], [71 x i8]* @.str.1, i64 0, i64 0), i8* %17)
  %19 = load i32, i32* @DICTIONARY_FLAGS, align 4
  %20 = call i32 @dictionary_create(i32 %19)
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 4
  store i32 %20, i32* %22, align 8
  %23 = load i64, i64* %4, align 8
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 2
  store i64 %23, i64* %25, align 8
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 3
  store i64 %23, i64* %27, align 8
  %28 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 1
  store i64 0, i64* %29, align 8
  %30 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @registry, i32 0, i32 0), align 4
  %31 = sext i32 %30 to i64
  %32 = add i64 %31, 40
  %33 = trunc i64 %32 to i32
  store i32 %33, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @registry, i32 0, i32 0), align 4
  %34 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @registry, i32 0, i32 2), align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @registry, i32 0, i32 2), align 4
  %36 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @registry, i32 0, i32 1), align 4
  %37 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %38 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %41 = call i32 @dictionary_set(i32 %36, i32 %39, %struct.TYPE_6__* %40, i32 40)
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  ret %struct.TYPE_6__* %42
}

declare dso_local i32 @debug(i32, i8*, i8*, ...) #1

declare dso_local %struct.TYPE_6__* @mallocz(i32) #1

declare dso_local i32 @strncpyz(i32, i8*, i32) #1

declare dso_local i32 @dictionary_create(i32) #1

declare dso_local i32 @dictionary_set(i32, i32, %struct.TYPE_6__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
